// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chip basic usage 1`] = `
<bolt-chip>
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Hello World
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: medium 1`] = `
<bolt-chip size="medium">
  <span class="c-bolt-chip c-bolt-chip--size-medium">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: small 1`] = `
<bolt-chip size="small">
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip chip size: xsmall 1`] = `
<bolt-chip size="xsmall">
  <span class="c-bolt-chip c-bolt-chip--size-xsmall">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Chip size
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip icon only 1`] = `
<bolt-chip icon-only>
  <span class="c-bolt-chip c-bolt-chip--size-small c-bolt-chip--icon-only">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Show more
    </ssr-keep>
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__icon"
    >
      <svg slot="after"
           class="e-bolt-icon"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <g fill="#151619"
           fill-rule="evenodd"
           clip-rule="evenodd"
        >
          <path d="M19.2 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M6.4 16c0 1.8-1.4 3.2-3.2 3.2S0 17.8 0 16s1.4-3.2 3.2-3.2 3.2 1.4 3.2 3.2M32 16c0 1.8-1.4 3.2-3.2 3.2s-3.2-1.4-3.2-3.2 1.4-3.2 3.2-3.2S32 14.2 32 16">
          </path>
        </g>
      </svg>
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip icon usage 1`] = `
<bolt-chip>
  <span class="c-bolt-chip c-bolt-chip--size-small">
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__icon"
    >
      <svg slot="before"
           class="e-bolt-icon"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <path fill="#151619"
              fill-rule="evenodd"
              d="M29 5L10.7 23.3 3 15.6c-.7-.7-1.8-.7-2.5 0s-.7 1.8 0 2.5L9.4 27c.3.3.8.5 1.3.5s.9-.2 1.3-.5L31.5 7.5c.7-.7.7-1.8 0-2.5s-1.8-.7-2.5 0z"
              clip-rule="evenodd"
        >
        </path>
      </svg>
    </ssr-keep>
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Icon before
    </ssr-keep>
  </span>
</bolt-chip>
`;

exports[`chip url usage 1`] = `
<bolt-chip url="https://google.com"
           target="_blank"
           rel="noopener"
>
  <a href="https://google.com"
     target="_blank"
     rel="noopener"
     class="c-bolt-chip c-bolt-chip--link c-bolt-chip--size-small"
  >
    <ssr-keep for="bolt-chip"
              class="c-bolt-chip__text"
    >
      Has URL
    </ssr-keep>
  </a>
</bolt-chip>
`;
